feat(core): Improve logging, error handling, and scheduling; enhance Docker setup
This commit introduces several improvements to arrranger, focusing on logging, error handling, scheduling, and Docker setup.

**Key changes:**

-   **Enhanced Logging:**
    -   Added comprehensive logging for backup and sync operations, including success/failure, media counts, added/removed counts, and error details.
    -   Updated logging messages to provide more context and detail.
    -   Introduced `log_backup_operation` and `log_sync_operation` functions for consistent logging.
    -   Added log the number of skipped items during sync operations.
-   **Improved Error Handling:**
    -   Enhanced error handling for API connections, data fetching, and media additions/removals.
    -   Added checks for missing quality profiles and root folders, preventing sync failures.
    -   Improved handling of HTTP errors (401, 404, 409) and connection issues.
    -   Improved handling of database constraint errors during sync operations, to avoid considering the operation a failure when a media already exists in the database.
-   **Refined Scheduling:**
    -   Streamlined backup and sync configuration to exclusively support cron scheduling.
    -   Removed support for time-based schedules.
-   **Docker Enhancements:**
    -   Improved Dockerfile and entrypoint.sh for better timezone support and user management.
    -   Replaced `su-exec` with `gosu` for user switching.
    -   Removed unused build arguments and improved code formatting.
-   **Media Management Refinements:**
    -   Added exact counts for added, removed, and skipped media during backup and sync operations.
    -   Modified `save_media` to return detailed counts (current, previous, added, removed).
    -   Fetches quality profiles and root folders from destination instances before syncing.
-   **Configuration Update:**
    -   Updated `arrranger_instances.json.example` to use only cron schedules and removed obsolete fields.
- 

--- a/arrranger_instances.json.example
+++ b/arrranger_instances.json.example
@@ -6,31 +6,13 @@
     "backup": {
       "enabled": true,
       "schedule": {
-        "type": "daily",
-        "time": "00:00"
+        "type": "cron",
+        "cron": "0 * * * *"
       }
     },
-    "sync": {
-      "parent_instance": "sonarr_4k",
-      "schedule": {
-        "type": "daily",
-        "time": "02:00"
-      }
+    "sync": {}
     },
-    "filters": {
-      "quality_profiles": [
-        "1080p",
-        "720p"
-      ],
-      "root_folders": [
-        "/tv/shows",
-        "/tv/anime"
-      ],
-      "tags": [
-        "sync",
-        "backup"
-      ]
-    }
+    "filters": {}
   },
   "sonarr_4k": {
     "url": "http://your_4k_sonarr_url",
@@ -39,18 +21,18 @@
     "backup": {
       "enabled": true,
       "schedule": {
-        "type": "weekly",
-        "time": "00:00"
+        "type": "cron",
+        "cron": "00:00"
       }
     },
-    "sync": {},
+    "sync": {
+      "parent_instance": "sonarr_main",
+      "schedule": {
+        "type": "cron",
+        "cron": "*/5 * * * *"
+      }
+    },
     "filters": {
-      "quality_profiles": [
-        "4K"
-      ],
-      "root_folders": [
-        "/tv/4k-shows"
-      ],
       "tags": [
         "4k"
       ]
@@ -64,25 +46,16 @@
       "enabled": true,
       "schedule": {
         "type": "cron",
-        "cron": "0 0 * * *"
+        "cron": "0 * * * *"
       }
     },
-    "sync": {
-      "parent_instance": "radarr_4k",
-      "schedule": {
-        "type": "daily",
-        "time": "03:00"
-      }
-    },
+    "sync": {},
     "filters": {
       "quality_profiles": [
         "1080p"
       ],
       "root_folders": [
         "/movies/1080p"
-      ],
-      "tags": [
-        "sync"
       ]
     }
   },
@@ -91,24 +64,19 @@
     "api_key": "YOUR_4K_RADARR_API_KEY",
     "type": "radarr",
     "backup": {
-      "enabled": true,
+      "enabled": false,
+    },
+    "sync": {
+      "parent_instance": "radarr_main",
       "schedule": {
-        "type": "monthly",
-        "time": "00:00"
+        "type": "cron",
+        "cron": "0 0 * * *"
       }
     },
-    "sync": {},
     "filters": {
       "quality_profiles": [
         "4K HDR",
         "4K SDR"
-      ],
-      "root_folders": [
-        "/movies/4k"
-      ],
-      "tags": [
-        "4k",
-        "hdr"
       ]
     }
   }
