--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -6,10 +6,10 @@ services:
       args:
         - BUILDKIT_INLINE_CACHE=0
     container_name: arrranger-local
-    volumes:
-      - ./config:/config:ro
-      - ./data:/data
     restart: unless-stopped
+    volumes:
+      - ./config:/config:rw
+      - ./data:/data:rw
     environment:
       - TZ=Europe/Rome
       - CONFIG_FILE=/config/arrranger_instances.json
