--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,14 +2,12 @@ services:
   arrranger:
     image: ghcr.io/lucanori/arrranger:latest
     container_name: arrranger
+    restart: unless-stopped
     volumes:
-      - ./config:/config:ro
-      - ./data:/data
+      - ./config:/config:rw
+      - ./data:/data:rw
     restart: unless-stopped
     environment:
       - TZ=Europe/Rome  # Set your timezone here
       - CONFIG_FILE=/config/arrranger_instances.json
       - DB_NAME=/data/arrranger.db
-    labels:
-      # Enable Watchtower, remove if not needed
-      - com.centurylinklabs.watchtower.enable=true
