Refactor project structure and add release history features
This commit introduces a major restructuring of the project layout, moving core logic into a `src/` directory and consolidating entry points.

Key changes include:
- Restructured project into `src/`, `main.py`, `test/`, and `docs/`.
- Implemented release history backup and restore functionality using a new SQLite database manager.
- Switched dependency management from Poetry/Pip to `uv`.
- Updated documentation, including removing the separate developer guide (`DEVELOPER_GUIDE.md`).
- Changed the project license from MIT to GNU General Public License Version 3.
- Revamped the Docker build process and updated the entrypoint script.

--- a/.gitignore
+++ b/.gitignore
@@ -13,13 +13,13 @@
 *.DS_Store
 *.ini
 pkg/
-src/
 __pycache__
+*.egg-info
+.venv
 
 *.db
 *.html
 
-/docs
 /data
 /config
 arrranger_instances.json
