--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,14 +4,13 @@ version = "0.1.0"
 description = "A project that uses requests, croniter, and schedule."
 readme = "README.md"
 requires-python = ">=3.8"
-license = {text = "MIT"}
+license = "GPL-3.0-or-later"
 authors = [
     {name = "Your Name", email = "you@example.com"},
 ]
 classifiers = [
     "Development Status :: 3 - Alpha",
     "Intended Audience :: Developers",
-    "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
@@ -31,18 +30,84 @@ dependencies = [
 "Bug Tracker" = "https://github.com/yourusername/arrranger/issues"
 
 [build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
+requires = ["setuptools>=61.0"]
+build-backend = "setuptools.build_meta"
 
-[tool.rye]
-managed = true
-dev-dependencies = []
-
-[tool.hatch.metadata]
-allow-direct-references = true
-[tool.hatch.build.targets.wheel]
-include = [
-  "arrranger_logging.py",
-  "arrranger_scheduler.py",
-  "arrranger_sync.py",
+[project.optional-dependencies]
+dev = [
+    "uv>=0.1.12",
+    "ruff>=0.1.6",
+    "pytest>=7.3.1",
+    "pytest-cov>=4.1.0",
 ]
+
+[tool.setuptools]
+package-dir = {"arrranger" = "src"}
+packages = ["arrranger"]
+
+[tool.ruff]
+# Target src and test directories
+src = ["src", "test"]
+# Enable flake8-bugbear (`B`) rules.
+select = [
+    "E",  # pycodestyle errors
+    "F",  # pyflakes
+    "B",  # flake8-bugbear
+    "I",  # isort
+    "C4", # flake8-comprehensions
+    "UP", # pyupgrade
+    "N",  # pep8-naming
+    "ANN", # flake8-annotations
+    "W",  # pycodestyle warnings
+]
+ignore = [
+    "ANN101",  # Missing type annotation for `self` in method
+    "ANN102",  # Missing type annotation for `cls` in classmethod
+]
+
+# Allow autofix for all enabled rules (when `--fix`) is provided.
+fixable = ["ALL"]
+unfixable = []
+
+# Exclude a variety of commonly ignored directories.
+exclude = [
+    ".bzr",
+    ".direnv",
+    ".eggs",
+    ".git",
+    ".git-rewrite",
+    ".hg",
+    ".mypy_cache",
+    ".nox",
+    ".pants.d",
+    ".pytype",
+    ".ruff_cache",
+    ".svn",
+    ".tox",
+    ".venv",
+    "__pypackages__",
+    "_build",
+    "buck-out",
+    "build",
+    "dist",
+    "node_modules",
+    "venv",
+]
+
+# Same as Black.
+line-length = 88
+
+# Allow unused variables when underscore-prefixed.
+dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
+
+# Target Python 3.8+
+target-version = "py38"
+
+[tool.ruff.isort]
+known-first-party = ["arrranger"]
+
+[tool.ruff.format]
+quote-style = "double"
+indent-style = "space"
+skip-magic-trailing-comma = false
+line-ending = "auto"
